feat: add sidebar and sheet components with utility functions
- Introduced a new sidebar component with various subcomponents including SidebarContent, SidebarFooter, SidebarGroup, SidebarHeader, and more.
- Implemented responsive behavior for mobile views using a Sheet component for offcanvas functionality.
- Added utility functions for managing sidebar state and keyboard shortcuts.
- Created a skeleton loading component for sidebar menu items.
- Updated router to include login and register paths.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,10 +1,19 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="es">
   <head>
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vite App</title>
+    <title>Tramits</title>
+    <style>
+      #app {
+        width: 100lvw;
+        height: 100lvh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+    </style>
   </head>
   <body>
     <div id="app"></div>
