--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,12 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tramits</title>
     <style>
-      #app {
+      body {
         width: 100lvw;
         height: 100lvh;
         display: flex;
         justify-content: center;
         align-items: center;
+      }
+
+      #app {
+        width: 375px;
       }
     </style>
   </head>
