--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,7 +12,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        background-color: rgb(205, 255, 217);
+        background-color: #cdffd9;
       }
 
       #app {
